force-app/main/default/objects/ServiceCrewMember/fields/Active_Member__c.field-meta.xml
<CustomField>
    <fullName>Active_Member__c</fullName>
    <formula>DATEVALUE(StartDate) &lt;=  TODAY() &amp;&amp; (ISBLANK(EndDate) || DATEVALUE(EndDate) &gt; Today())</formula>
    <label>Active Member</label>
    <type>Checkbox</type>
</CustomField>