force-app/main/default/objects/ServiceCrewMember/fields/Crew_Already_Has_Leader__c.field-meta.xml
<CustomField>
    <fullName>Crew_Already_Has_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew Already Has Leader</label>
    <type>Checkbox</type>
</CustomField>