force-app/main/default/objects/ServiceCrewMember/validationRules/Crew_Should_Have_Leader.validationRule-meta.xml
<ValidationRule>
    <fullName>Crew_Should_Have_Leader</fullName>
    <active>true</active>
    <errorConditionFormula>Crew_Has_Leader__c = FALSE</errorConditionFormula>
    <errorMessage>A crew should have a leader</errorMessage>
</ValidationRule>